add form input filter

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,4 @@
-php_flag display_errors Off
+<IfModule php5_module>
+	php_flag display_errors Off
+    php_flag session.cookie_httponly on
+</IfModule>
